--- a/ks.cfg
+++ b/ks.cfg
@@ -3,7 +3,7 @@ text
 lang zh_TW.UTF-8
 keyboard us
 network --onboot yes --device eth0 --bootproto dhcp --noipv6
-rootpw  --iscrypted $1$fBDmsiFq$PMMFfpyJDa9ISBWp0dn0O1
+rootpw  --iscrypted XXXXXXXXXXXXXXXXXXXXXX
 firewall --port=22:tcp,80:tcp
 authconfig --enableshadow --passalgo=sha512
 selinux --enforcing
@@ -41,6 +41,6 @@ cp /mnt/source/lnmp1.2-full.tar.gz /mnt/sysimage/root/lnmp1.2-full.tar.gz
 %post --log=/root/post.log
 #!/bin/sh
 useradd iscom
-sed -i.bak 's/iscom\:\!\!/iscom\:\$1\$.sYWHs6u$okPocB\/rpzwM1yvohFlau\//g' /etc/shadow
+sed -i.bak 's/iscom\:\!\!/iscom\:XXXXXXXXXXXXXXXXXXXXXX/g' /etc/shadow
 cd /root
 tar zxf lnmp1.2-full.tar.gz
