Added files via upload
kickstart with automatic install LNMP and YUM Update

--- a/ks.cfg
+++ b/ks.cfg
@@ -1,10 +1,9 @@
-
 install
 text
 lang zh_TW.UTF-8
 keyboard us
-network --onboot yes --device eth0 --bootproto dhcp --noipv6
-rootpw  --iscrypted XXXXXXXXXXXXXXXXXXXX
+network --onboot yes --device eth0 --bootproto dhcp --noipv6 --hostname localhost
+rootpw  --iscrypted $1$fBDmsiFq$PMMFfpyJDa9ISBWp0dn0O1
 firewall --port=22:tcp,80:tcp
 authconfig --enableshadow --passalgo=sha512
 selinux --enforcing
@@ -38,10 +37,65 @@ unzip
 
 %post --nochroot --log=/root/post.log
 cp /mnt/source/lnmp1.2-full.tar.gz /mnt/sysimage/root/lnmp1.2-full.tar.gz
+cp /mnt/source/lnmpinstall /mnt/sysimage/etc/init.d/lnmpinstall
+cp /mnt/source/lnmpinstall2.sh /mnt/sysimage/root/lnmpinstall2.sh
+chmod +x /mnt/sysimage/etc/init.d/lnmpinstall
+chmod +x /mnt/sysimage/root/lnmpinstall2.sh
 
 %post --log=/root/post.log
 #!/bin/sh
+exec < /dev/tty6 > /dev/tty6 2> /dev/tty6
+chvt 6
 useradd iscom
-sed -i.bak 's/iscom\:\!\!/iscom\:XXXXXXXXXXXXXXXXXXXX/g' /etc/shadow
+sed -i.bak 's/iscom\:\!\!/iscom\:\$1\$.sYWHs6u$okPocB\/rpzwM1yvohFlau\//g' /etc/shadow
 cd /root
 tar zxf lnmp1.2-full.tar.gz
+
+# netzwerkconfig
+scrFile=/etc/sysconfig/network-scripts/ifcfg-eth0
+hostname=""
+ip=""
+netmask=""
+gw=""
+opts=""
+answer="n"
+device="eth0"
+hwaddr=`ifconfig $device | grep -i hwaddr | sed -e 's#^.*hwaddr[[:space:]]*##I'`
+dns1=""
+dns2=""
+clear
+
+while [ x"$answer" != "xy" ] && [ x"$answer" != "xY" ] ; do
+        echo -n "enter hostname: "; read hostname
+        echo -n "enter ip: "; read ip
+        echo -n "enter netmask: "; read netmask
+        echo -n "enter default gateway: "; read gw
+        echo -n "enter dns1: "; read dns1
+        echo -n "enter dns2: "; read dns2
+        echo
+
+        echo You entered:
+        echo -e "\thostname: $hostname"
+        echo -e "\tip: $ip"
+        echo -e "\tnetmask: $netmask"
+        echo -e "\tdefault gateway: $gw"
+        echo -e "\tdns server: $dns1  $dns2"
+        echo -n "Is this correct? [y/n] "; read answer
+done
+
+sed -i -e 's#^\(HOSTNAME=\).*$#\1'"$hostname"'#' /etc/sysconfig/network
+echo GATEWAY=$gw >> /etc/sysconfig/network
+
+echo DEVICE=$device > $scrFile
+echo BOOTPROTO=static >> $scrFile
+echo ONBOOT=yes >> $scrFile
+echo NM_CONTROLLED=no >> $scrFile
+echo HWADDR=$hwaddr >> $scrFile
+echo IPADDR=$ip >> $scrFile
+echo NETMASK=$netmask >> $scrFile
+echo USERCTL=no >> $scrFile
+echo DNS1=$dns1 >> $scrFile
+echo DNS2=$dns2 >> $scrFile
+ln -s /etc/init.d/lnmpinstall  /etc/rc3.d/S99lnmpinstall
+chvt 1
+exec < /dev/tty1 > /dev/tty1 2> /dev/tty1
